properly scope localize (#13)

--- a/px-inbox.html
+++ b/px-inbox.html
@@ -302,17 +302,17 @@ Custom property | Description | Default
       const hours = Math.floor(seconds / 3600);
       const minutes = Math.floor(seconds / 60);
 
-      if (days > 548)                   return `${years} ${localize('years ago')}`;
-      if (days >= 320 && days <= 547)   return localize('a year ago');
-      if (days >= 45 && days <= 319)    return `${months} ${localize('months ago')}`;
-      if (days >= 26 && days <= 45)     return localize('a month ago');
-      if (hours >= 36 && days <= 25)    return `${days} ${localize('days ago')}`;
-      if (hours >= 22 && hours <= 35)   return localize('a day ago');
-      if (minutes >= 90 && hours <= 21) return `${hours} ${localize('hours ago')}`;
-      if (minutes >= 45 && minutes <= 89) return localize('an hour ago');
-      if (seconds >= 90 && minutes <= 44) return `${minutes} ${localize('minutes ago')}`;
-      if (seconds >= 45 && seconds <= 89) return localize('a minute ago');
-      if (seconds >= 0 && seconds <= 45)  return localize('a few seconds ago');
+      if (days > 548)                   return `${years} ${this.localize('years ago')}`;
+      if (days >= 320 && days <= 547)   return this.localize('a year ago');
+      if (days >= 45 && days <= 319)    return `${months} ${this.localize('months ago')}`;
+      if (days >= 26 && days <= 45)     return this.localize('a month ago');
+      if (hours >= 36 && days <= 25)    return `${days} ${this.localize('days ago')}`;
+      if (hours >= 22 && hours <= 35)   return this.localize('a day ago');
+      if (minutes >= 90 && hours <= 21) return `${hours} ${this.localize('hours ago')}`;
+      if (minutes >= 45 && minutes <= 89) return this.localize('an hour ago');
+      if (seconds >= 90 && minutes <= 44) return `${minutes} ${this.localize('minutes ago')}`;
+      if (seconds >= 45 && seconds <= 89) return this.localize('a minute ago');
+      if (seconds >= 0 && seconds <= 45)  return this.localize('a few seconds ago');
     },
     /**
      * Searches through the list titles and subtitles and filters based on the query.
