--- a/demo/px-inbox-demo.html
+++ b/demo/px-inbox-demo.html
@@ -13,13 +13,12 @@
 <link rel="import" href="px-inbox-detail-demo.html" />
 
 <!-- Imports for this component -->
-<link rel="import" href="../../px-demo/css/px-demo-styles.html" />
 <link rel="import" href="../px-inbox.html" />
 
 <!-- Demo DOM module -->
 <dom-module id="px-inbox-demo">
   <template>
-    <style include="px-demo-styles">
+    <style>
       :host {
         --px-inbox-height: 500px;
       }
