--- a/index.html
+++ b/index.html
@@ -25,85 +25,132 @@ limitations under the License.
       Fast bootstrapping of the webcomponents-lite library. Only loads the library
       if the browser doesn't natively support web components.
     -->
-    <script type="text/javascript">
-    (function() {
-      'use strict';
+    <script type="module">
+import '@polymer/polymer/polymer-legacy.js';
+import 'px-theme/px-theme-styles.js';
+import 'px-demo/px-demo-theme-switcher.js';
+import './demo/px-inbox-demo.js';
 
-      var onload = function() {
-        // For native Imports, manually fire WebComponentsReady so user code
-        // can use the same code path for native and polyfill'd imports.
-        if (!window.HTMLImports) {
-          document.dispatchEvent(
-            new CustomEvent('WebComponentsReady', {bubbles: true})
-          );
-        }
-      };
+var onload = function() {
+  // For native Imports, manually fire WebComponentsReady so user code
+  // can use the same code path for native and polyfill'd imports.
+  if (!window.HTMLImports) {
+    document.dispatchEvent(
+      new CustomEvent('WebComponentsReady', {bubbles: true})
+    );
+  }
+};
 
-      var webComponentsSupported = (
-        'registerElement' in document && 'import' in document.createElement('link') && 'content' in document.createElement('template')
-      );
+var webComponentsSupported = (
+  'registerElement' in document && 'import' in document.createElement('link') && 'content' in document.createElement('template')
+);
 
-      if (!webComponentsSupported) {
-        var script = document.createElement('script');
-        script.async = true;
-        script.src = '../webcomponentsjs/webcomponents-lite.js';
-        script.onload = onload;
-        document.head.appendChild(script);
-      } else {
-        onload();
-      }
-    })();
-    </script>
+if (!webComponentsSupported) {
+  var script = document.createElement('script');
+  script.async = true;
+  script.src = '../webcomponentsjs/webcomponents-lite.js';
+  script.onload = onload;
+  document.head.appendChild(script);
+} else {
+  onload();
+}
+</script>
 
     <!--
       Load the Polymer library.
     -->
-    <link rel="import" href="../polymer/polymer.html"/>
+    <script type="module" src="../@polymer/polymer/polymer-legacy.js"></script>
 
     <!--
       Load theme files, apply default theme.
     -->
-    <link rel="import" href="../px-theme/px-theme-styles.html"/>
-    <custom-style>
-      <style include="px-theme-styles" is="custom-style"></style>
-    </custom-style>
+    <script type="module" src="../px-theme/px-theme-styles.js"></script>
+    <!-- FIXME(polymer-modulizer):
+        These imperative modules that innerHTML your HTML are
+        a hacky way to be sure that any mixins in included style
+        modules are ready before any elements that reference them are
+        instantiated, otherwise the CSS @apply mixin polyfill won't be
+        able to expand the underlying CSS custom properties.
+        See: https://github.com/Polymer/polymer-modulizer/issues/154
+        -->
+    <script type="module">
+const $_documentContainer = document.createElement('template');
 
-     <link defer rel="import" href="../px-demo/px-demo-theme-switcher.html"/>
-    <px-demo-theme-switcher-frame id="themeMessenger" origin="https://www.predix-ui.com"></px-demo-theme-switcher-frame>
-    <px-demo-theme-switcher id="themeSwitcher"></px-demo-theme-switcher>
-    <script>
-      (function(){
-        var messenger = document.getElementById('themeMessenger');
-        var switcher = document.getElementById('themeSwitcher');
-        messenger.addEventListener('is-dark-theme-changed', function(evt) {
-          switcher.isDarkTheme = evt.detail.value;
-        });
-      })();
-    </script>
+$_documentContainer.innerHTML = `<custom-style>
+      <style include="px-theme-styles" is="custom-style"></style>
+    </custom-style>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
+
+     <script type="module">
+const $_documentContainer = document.createElement('template');
+$_documentContainer.innerHTML = `<link defer="" rel="import" href="../px-demo/px-demo-theme-switcher.html">`;
+document.body.appendChild($_documentContainer.content);
+</script>t>
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+$_documentContainer.innerHTML = `<px-demo-theme-switcher-frame id="themeMessenger" origin="https://www.predix-ui.com"></px-demo-theme-switcher-frame>`;
+document.body.appendChild($_documentContainer.content);
+</script>
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+$_documentContainer.innerHTML = `<px-demo-theme-switcher id="themeSwitcher"></px-demo-theme-switcher>`;
+document.body.appendChild($_documentContainer.content);
+</script>
+    <script type="module">
+import '@polymer/polymer/polymer-legacy.js';
+import 'px-theme/px-theme-styles.js';
+import 'px-demo/px-demo-theme-switcher.js';
+import './demo/px-inbox-demo.js';
+var messenger = document.getElementById('themeMessenger');
+var switcher = document.getElementById('themeSwitcher');
+messenger.addEventListener('is-dark-theme-changed', function(evt) {
+  switcher.isDarkTheme = evt.detail.value;
+});
+</script>
 
     <!--
       Asynchronously import the px-catalog element, which is the entrypoint
       for our application.
     -->
-    <link async rel="import" href="demo/px-inbox-demo.html"/>
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+$_documentContainer.innerHTML = `<link async="" rel="import" href="demo/px-inbox-demo.html">`;
+document.body.appendChild($_documentContainer.content);
+</script>ipt>
 
     <!--
       Load the app icon and manifest for Android devices.
     -->
-    <link defer rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+$_documentContainer.innerHTML = `<link defer="" rel="icon" href="favicon.ico" type="image/x-icon">`;
+document.body.appendChild($_documentContainer.content);
+</script>
 
     <!--
       Basic page styles.
     -->
-    <style>
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<style>
       html, body {
         margin: 0;
         padding: 0;
       }
-    </style>
+    </style>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
   </head>
 
   <body>
-    <px-inbox-demo></px-inbox-demo>
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+$_documentContainer.innerHTML = `<px-inbox-demo></px-inbox-demo>`;
+document.body.appendChild($_documentContainer.content);
+</script>
   </body>
 </html>
